--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ path = "src/main.rs"
 [[bin]]
 name = "file_include"
 path = "src/file_include/main.rs"
+
+[[bin]]
+name = "char_for_emoji"
+path = "src/char_for_emoji/main.rs"
