--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 colored = "2"
+image = "0.24.7"
 rand = "0.8.3"
 
 [[bin]]
@@ -48,6 +49,10 @@ path = "src/std_io/main.rs"
 [[bin]]
 name = "str_concat"
 path = "src/str_concat/main.rs"
+
+[[bin]]
+name = "image"
+path = "src/image/main.rs"
 
 [features]
 default = []
