--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4.4.0"
 colored = "2"
 image = "0.24.7"
 imageproc = "0.23.0"
@@ -63,6 +64,10 @@ path = "src/thread/main.rs"
 [[bin]]
 name = "image_with_text"
 path = "src/image_with_text/main.rs"
+
+[[bin]]
+name = "web_api"
+path = "src/web_api/main.rs"
 
 [features]
 default = []
