--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ image = "0.24.7"
 imageproc = "0.23.0"
 rand = "0.8.3"
 rusttype = "0.9.3"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.106"
 
 [[bin]]
 name = "main"
@@ -68,6 +70,10 @@ path = "src/image_with_text/main.rs"
 [[bin]]
 name = "web_api"
 path = "src/web_api/main.rs"
+
+[[bin]]
+name = "web_api_create_image"
+path = "src/web_api_create_image/main.rs"
 
 [features]
 default = []
